creating the function of grading
